--- a/package.json
+++ b/package.json
@@ -149,10 +149,10 @@
     "diagnostics_channel": "^1.1.0",
     "elasticsearch": "^16.7.3",
     "eslint": "^8.42.0",
-    "eslint-config-standard": "^16",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-license-header": "^0.6.0",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "express": "^4.17.1",
     "express-queue": "^0.0.13",
