--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
   },
   "ignorePatterns": [
     "/*.example.js", // a pattern for uncommited local dev files to avoid linting
+    "/*.example.mjs", // a pattern for uncommited local dev files to avoid linting
     "/.nyc_output",
     "/build",
     "node_modules",
@@ -40,6 +41,10 @@
     "/test/types/transpile/index.js",
     "/test/types/transpile-default/index.js",
     "/test_output",
-    "tmp"
+    "tmp",
+    // These files use top-level await, which is *fine* for ESM files but, IIUC,
+    // not supported by eslint until v8.
+    "/test/instrumentation/modules/fixtures/use-fastify.mjs",
+    "/test/instrumentation/modules/http/fixtures/use-dynamic-import.mjs"
   ]
 }
