--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "docs:open": "PREVIEW=1 npm run docs:build",
     "docs:build": "./docs/scripts/build_docs.sh apm-agent-nodejs ./docs ./build",
     "lint": "npm run lint:eslint && npm run lint:license-files && npm run lint:yaml-files && npm run lint:tav",
-    "lint:eslint": "eslint . # requires node >12.20.0",
-    "lint:fix": "eslint --fix .  # requires node >12.20.0",
+    "lint:eslint": "eslint --ext=js,mjs,cjs . # requires node >=12.20.0",
+    "lint:fix": "eslint --ext=js,mjs,cjs --fix .  # requires node >=12.20.0",
     "lint:license-files": "./dev-utils/gen-notice.sh --lint .  # requires node >=16",
     "lint:yaml-files": "./dev-utils/lint-yaml-files.sh  # requires node >=10",
     "lint:tav": "./dev-utils/lint-tav-json.js",
@@ -20,7 +20,6 @@
     "test:tav": "(cd test/opentelemetry-metrics/fixtures && tav --quiet) && (cd test/opentelemetry-bridge && tav --quiet) && (cd test/instrumentation/modules/next/a-nextjs-app && tav --quiet) && tav --quiet",
     "test:types": "tsc --project test/types/tsconfig.json && tsc --project test/types/transpile/tsconfig.json && node test/types/transpile/index.js && tsc --project test/types/transpile-default/tsconfig.json && node test/types/transpile-default/index.js  # requires node >=14.17",
     "test:babel": "babel test/babel/src.js --out-file test/babel/out.js && cd test/babel && node out.js",
-    "test:esm": "node --experimental-modules test/esm/index.mjs",
     "bench": "./test/benchmarks/scripts/run-benchmarks.sh",
     "bench:ci": "./test/benchmarks/scripts/run-benchmarks-ci.sh",
     "local:start": "./test/script/local-deps-start.sh",
@@ -103,6 +102,7 @@
     "escape-string-regexp": "^4.0.0",
     "fast-safe-stringify": "^2.0.7",
     "http-headers": "^3.0.2",
+    "import-in-the-middle": "1.3.5",
     "is-native": "^1.0.1",
     "lru-cache": "^6.0.0",
     "measured-reporting": "^1.51.1",
