chore(deps): bump OpenTelemetry deps
This also adds the 0BSD license, used by the new tslib dep of
some OTel packages, to the list of known licenses for redist.

Obsoletes: #3478, #3483

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -50,3 +50,11 @@ updates:
     open-pull-requests-limit: 5
     reviewers:
       - "elastic/apm-agent-node-js"
+
+  - package-ecosystem: "npm"
+    directory: "/examples/opentelemetry-metrics"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+    reviewers:
+      - "elastic/apm-agent-node-js"
