--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,6 +18,8 @@ updates:
       # Babel packages are numerous and our tests don't depend on finer details.
       - dependency-name: "@babel/*"
         update-types: "version-update:semver-patch"
+      - dependency-name: "@types/*"
+        update-types: "version-update:semver-patch"
 
   - package-ecosystem: "npm"
     directory: "/test/instrumentation/azure-functions/fixtures/AJsAzureFnApp"
