--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
   },
   "homepage": "https://github.com/elastic/apm-agent-nodejs",
   "dependencies": {
+    "@aws-sdk/client-sns": "^3.370.0",
     "@elastic/ecs-pino-format": "^1.2.0",
     "@opentelemetry/api": "^1.4.1",
     "@opentelemetry/core": "^1.11.0",
