--- a/.tav.yml
+++ b/.tav.yml
@@ -520,10 +520,10 @@ aws-sdk:
   # of versions to test.
   #
   # Maintenance note: This should be updated periodically using:
-  #   ./dev-utils/aws-sdk-s3-client-tav-versions.sh
+  #   node ./dev-utils/tav-versions.js @aws-sdk/client-s3 ">=3.15.0 <4"
   #
-  # Test v3.15.0, every N=37 of 191 releases, and current latest.
-  versions: '3.15.0 || 3.48.0 || 3.112.0 || 3.188.0 || 3.257.0 || 3.315.0 || 3.325.0 || >3.325.0 <4'
+  # Test v3.15.0, every N=44 of 225 releases, and current latest.
+  versions: '3.15.0 || 3.54.0 || 3.141.0 || 3.218.0 || 3.300.0 || 3.373.0 || 3.379.1 || >3.379.1 <4'
   commands:
     - node test/instrumentation/modules/@aws-sdk/client-s3.test.js
   node: '>=14'
