--- a/.tav.yml
+++ b/.tav.yml
@@ -529,7 +529,7 @@ aws-sdk:
   node: '>=14'
 
 
-'@aws-sdk/client-s3':
+'@aws-sdk/client-sns':
   # Maintenance note: This should be updated periodically using:
   #   node ./dev-utils/tav-versions.js @aws-sdk/client-sns ">=3.15.0 <4"
   #
