fix: the loader.mjs needed for ESM support was not included in the published package

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "types",
     "start.js",
     "start-next.js",
+    "loader.mjs",
     "index.d.ts",
     "start.d.ts",
     "start-next.d.ts"
